----- v1.51, 24 Feb 2026
+ b1_increase = -1 adds sqrt(b1) * curves when looping.


----- v1.50, 10 Feb 2026
+ chooses SNFS parameters dynamically.
+ exits immediately if Ctrl-C is pressed twice.
* proper skew for SNFS poly.


----- v1.40, 07 Feb 2026
+ change settings while dodc is running by writing them to dodc_live.cfg using
  the same syntax and parameters as dodc.cfg. Very useful for changing e.g. nmax
  or worker_threads.
+ cado_snfs and cado_gnfs methods are now available if you've got a functional
  cado-nfs system set up. SNFS uses straight-forward polynomials created from
  the k*2^n+-1 expression and static parameters from the example for 2^512+1. It
  seems to work well enough for n around there, but presumably increasingly
  terrible the further away you get. GNFS uses cado-nfs' built-in poly search.
+ new "internet_timeout" setting aborts internet requests after a while.
+ new "pcore_workers" setting schedules some workers with Background QoS class
  (macOS only). That runs those workers on Efficency cores only.
+ new "exclude_reservations" setting to skip downloading other people's reserved
  numbers.
+ new "auto_reserve" and "reserve_url" settings to automatically reserve large
  numbers you're doing QS or NFS on.
+ added SIGINT handler to gracefully exit when Ctrl-C is pressed.
+ scientific notation for integer settings values.
* overhauled config handling for better robustness and changed all setting names
  to snake_case instead of justwordssmushedtogether.
* renamed dodc.ini to dodc.cfg.


----- v1.36, 21 Jan 2026
+ batch submit all unsubmitted factors instead of one by one.
+ new "submitinterval" setting limits server communication.
* updated code to build on macOS.


----- v1.35, 25 Apr 2013
* updated gmp-ecm's sigma parsing to work with newer versions.


----- v1.32, 26 Feb 2009
+ added automation for snfs jobs using ggnfs.


----- v1.31, 11 Feb 2009
+ if more than 1 worker thread was still running when dodc was about to exit,