@@ -1,5 +1,6 @@
 ----- v1.51, 24 Feb 2026
 + b1_increase = -1 adds sqrt(b1) * curves when looping.
+* use all msieve factors instead of just the first one.
 
 
 ----- v1.50, 10 Feb 2026
